99_yaml/00_landing_page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: victorbnnt/personal:landing_page
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: landing-page
