99_yaml/00_main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainsite
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
      webapp: moqku.co
  template:
    metadata:
      labels:
        app: main
        webapp: moqku.co
    spec:
      containers:
      - name: mainsite
        image: victorbnnt/personal:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mainsite
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
  #annotations:
  #  metallb.universe.tf/loadBalancerIPs: 192.168.1.155
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: main
