99_yaml/01_curriculum.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curriculum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curriculum
  template:
    metadata:
      labels:
        app: curriculum
    spec:
      containers:
      - name: curriculum
        image: victorbnnt/personal:curriculum
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: curriculum
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: curriculum
