99_yaml/02_bluejay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluejay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluejay
  template:
    metadata:
      labels:
        app: bluejay
    spec:
      containers:
      - name: bluejay
        image: victorbnnt/personal:bluejay
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bluejay
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: bluejay
