99_yaml/03_articles.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: articles
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
spec:
  replicas: 1
  selector:
    matchLabels:
      app: articles
  template:
    metadata:
      labels:
        app: articles
        webapp: moqku.co
    spec:
      containers:
      - name: articles
        image: victorbnnt/personal:articles
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: articles
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: articles
