99_yaml/04_taxifare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxifare
  namespace: main
  labels:
    webapp: moqku.co
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taxifare
  template:
    metadata:
      labels:
        app: taxifare
        webapp: moqku.co
    spec:
      containers:
      - name: taxifareapi
        image: victorbnnt/personal:taxifareapi
        imagePullPolicy: Always
        ports:
        - containerPort: 81
      - name: frontend
        image: victorbnnt/personal:taxifarefrontend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: taxifare
  namespace: main
  labels:
    webapp: moqku.co
spec:
  type: ClusterIP
  clusterIP: 10.96.12.1
  ports:
  - port: 80
    targetPort: 80
    name: svc-frontend
  - port: 81
    targetPort: 81
    name: svc-api
  selector:
    app: taxifare
