99_yaml/07_titanic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titanic
  template:
    metadata:
      labels:
        app: titanic
        webapp: moqku.co
    spec:
      containers:
      - name: titanicapi
        image: victorbnnt/personal:titanicapi
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      - name: frontend
        image: victorbnnt/personal:titanicfrontend
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: titanic
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8501
  selector:
    app: titanic
