99_yaml/ingress-articles.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: articles
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/articles)$ $1/ redirect;
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /articles(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: articles
            port:
              number: 80
