99_yaml/ingress-jelly.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainsite
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - moqku.co
    - www.moqku.co
    secretName: tls-jelly
  rules:
  - host: moqku.co
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: mainsite
            port:
              number: 80
  - host: www.moqku.co
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: mainsite
            port:
              number: 80
