99_yaml/ingress-personal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /curriculum(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: curriculum
            port:
              number: 80
      - path: /bluejay(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: bluejay
            port:
              number: 80
      - path: /articles(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: articles
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: landing-page
            port:
              number: 80
