99_yaml/ingress-streamlit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raininaustralia
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/ria)$ $1/ redirect;
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ria(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: raininaustralia
            port:
              number: 80
